binding PostButton to the keyboard

--- a/breakPointApp/Base.lproj/Main.storyboard
+++ b/breakPointApp/Base.lproj/Main.storyboard
@@ -332,7 +332,7 @@
                                     <constraint firstItem="gs3-vS-1Y1" firstAttribute="top" secondItem="tX6-wD-86v" secondAttribute="top" constant="28" id="qqL-yv-cv5"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-fx-crg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="dyi-fx-crg">
                                 <rect key="frame" x="16" y="91" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="GMp-yA-S3Z"/>
